ms-payment/src/main/java/com/example/mspayment/error/TransactionNotFoundException.java
package com.example.mspayment.error;

public class TransactionNotFoundException extends CommonException{
    public TransactionNotFoundException(String errorMessage) {
        super(ErrorCodes.TRANSACTION_NOT_FOUND, errorMessage);
    }
}
